--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,137 +1,47 @@
-<div class="row">
-  <div class="col-md-2"></div>
-  <div class="col-md-8">
+<table class="table">
+  <thead class="h">
+    <tr class="h">
+      <th class="h">Title</th>
+      <th class="h">Description</th>
+      <th class="h">Date</th>
+      <th class="h">Status</th>
+      <th class="h">Options</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="itinerary" (dblclick)="editItinerary(itinerary)" *ngFor="let itinerary of itinerarysList">
 
-    <div class="itinerarys" *ngIf="itinerarysList">
-      <table class="table">
-        <thead class="h">
-          <tr class="h">
-            <th class="h">Title</th>
-            <th class="h">Description</th>
-            <th class="h">Date</th>
-            <th class="h">Status</th>
-            <th class="h">Options</th>
-          </tr>
-        </thead>
-        <tbody>
+      <ng-container *ngIf="!editItinerarys.includes(itinerary); else editTD">
+        <td>{{itinerary.title}}</td>
+        <td>{{itinerary.description}}</td>
+        <td>{{itinerary.date | date}}</td>
+        <td>{{itinerary.status}}</td>
+      </ng-container>
 
-          <tr class="itinerary" (dblclick)="editItinerary(itinerary)" *ngFor="let itinerary of itinerarysList">
+      <ng-template #editTD>
+        <td><input type="text" name="title" id="title" (keypress)="submitItinerary($event, itinerary)" [(ngModel)]="itinerary.title"
+            placeholder="Title" class="form-control"></td>
+        <td><input type="text" name="description" id="description" (keypress)="submitItinerary($event, itinerary)"
+            [(ngModel)]="itinerary.description" placeholder="Description" class="form-control"></td>
+        <td>{{itinerary.date | date}}</td>
+        <td>
+          <input type="text" name="status" id="status" (keypress)="submitItinerary($event, itinerary)" [(ngModel)]="itinerary.status"
+            placeholder="Status" class="form-control">
+        </td>
+      </ng-template>
 
-            <td>{{itinerary.title}}</td>
-            <td>{{itinerary.description}}</td>
-            <td>{{itinerary.date | date}}</td>
-            <td>{{itinerary.status}}</td>
+      <td class="o">
+        <button class="btn btn-success" (click)="doneItinerary(itinerary)">
+          <i class="fa fa-check"></i>
+        </button>
+        <button class="btn btn-primary" (click)="editItinerary(itinerary)">
+          <i class="fa fa-pencil"></i>
+        </button>
+        <button class="btn btn-danger" (click)="deleteItinerary(itinerary)">
+          <i class="fa fa-trash"></i>
+        </button>
+      </td>
 
-            <td>
-              <button class="btn btn-success" (click)="doneItinerary(itinerary)">
-                <i class="fa fa-check"></i>
-              </button>
-              <button class="btn btn-primary" (click)="editItinerary(itinerary)">
-                <i class="fa fa-pencil"></i>
-              </button>
-              <button class="btn btn-danger" (click)="deleteItinerary(itinerary)">
-                <i class="fa fa-trash"></i>
-              </button>
-            </td>
-
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-
-    <form>
-      <div class="form-row">
-
-        <div class="col-md-5">
-          <input type="text" name="title" id="title" [(ngModel)]="newItinerary.title" placeholder="Title" class="form-control">
-        </div>
-        <div class="col-md-5">
-          <input name="description" id="description" [(ngModel)]="newItinerary.description" placeholder="Description"
-            class="form-control" id="description">
-        </div>
-        <div class="col-md-2">
-          <button type="submit" class="btn btn-primary" (click)="create()">Add</button>
-        </div>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-2">
-
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-2"></div>
-  <div class="col-md-8">
-
-    <div class="itinerarys" *ngIf="itinerarysList">
-      <table class="table">
-        <thead class="h">
-          <tr class="h">
-            <th class="h">Title</th>
-            <th class="h">Description</th>
-            <th class="h">Date</th>
-            <th class="h">Status</th>
-            <th class="h">Options</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="itinerary" (dblclick)="editItinerary(itinerary)" *ngFor="let itinerary of itinerarysList">
-
-            <ng-container *ngIf="!editItinerarys.includes(itinerary); else editTD">
-              <td>{{itinerary.title}}</td>
-              <td>{{itinerary.description}}</td>
-              <td>{{itinerary.date | date}}</td>
-              <td>{{itinerary.status}}</td>
-            </ng-container>
-
-            <ng-template #editTD>
-              <td><input type="text" name="title" id="title" (keypress)="submitItinerary($event, itinerary)"
-                  [(ngModel)]="itinerary.title" placeholder="Title" class="form-control"></td>
-              <td><input type="text" name="description" id="description" (keypress)="submitItinerary($event, itinerary)"
-                  [(ngModel)]="itinerary.description" placeholder="Description" class="form-control"></td>
-              <td>{{itinerary.date | date}}</td>
-              <td>
-                <input type="text" name="status" id="status" (keypress)="submitItinerary($event, itinerary)"
-                  [(ngModel)]="itinerary.status" placeholder="Status" class="form-control">
-              </td>
-            </ng-template>
-
-            <td class="o">
-              <button class="btn btn-success" (click)="doneItinerary(itinerary)">
-                <i class="fa fa-check"></i>
-              </button>
-              <button class="btn btn-primary" (click)="editItinerary(itinerary)">
-                <i class="fa fa-pencil"></i>
-              </button>
-              <button class="btn btn-danger" (click)="deleteItinerary(itinerary)">
-                <i class="fa fa-trash"></i>
-              </button>
-            </td>
-
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-
-    <form>
-      <div class="form-row">
-
-        <div class="col-md-5">
-          <input type="text" name="title" id="title" [(ngModel)]="newItinerary.title" placeholder="Title" class="form-control">
-        </div>
-        <div class="col-md-5">
-          <input name="description" id="description" [(ngModel)]="newItinerary.description" placeholder="Description"
-            class="form-control" id="description">
-        </div>
-        <div class="col-md-2">
-          <button type="submit" class="btn btn-primary" (click)="create()">Add</button>
-        </div>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-2">
-
-  </div>
-</div>
+    </tr>
+  </tbody>
+</table>
