--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,3 +2,4 @@
 
 @import 'node_modules/bootstrap/scss/bootstrap.scss';
 @import '../node_modules/font-awesome/css/font-awesome.css';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
