--- a/frontend/src/app/views/itinerary-data/itinerary-data.component.html
+++ b/frontend/src/app/views/itinerary-data/itinerary-data.component.html
@@ -1,25 +1,53 @@
-<h1>
-  itinerary-data works!
-</h1>
- <ng-container>
-  <div class="table-responsive">
-      <table class="table table-hover">
-          <thead>
-              <tr>
-                  <th>Response</th>
-                  <th>Address</th>
-                  <th>Distance</th>
-                  <th>Category</th>
-              </tr>
-          </thead>
-          <ng-template ngFor let-group [ngForOf]='events.response.groups'>
-          <tr *ngFor="let event of group.items">
-              <td> {{ event.venue.name }}</td>
-              <td> {{ event.venue.location.address }} </td>
-              <td> {{ event.venue.categories }}</td>
-              <td> {{ event.venue.categories.name }}</td>
-          </tr>
-        </ng-template>
-      </table>
-  </div>
-</ng-container>
+<body ng-app="tablePlunker" style="margin: 10px;">
+    <h4 class="text-primary">Welcome, to build your itinerary, please enter a city,state in the search bar. Then, after clicking search, select the items wou would like to add to your itinerary!</h4>
+    <div ng-controller="GridController">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-10 col-sm-offset-3">
+                    <div id="imaginary_container">
+                        <div class="input-group stylish-input-group">
+                            <input #wordToSearchFor type="text" class="form-control" placeholder="Enter a city, state...">
+                            <button (click)="onButtonClick(wordToSearchFor.value)">
+                                <span class="glyphicon glyphicon-search">Submit</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <ngbd-dropdown-basic></ngbd-dropdown-basic>
+                      
+        <ng-container *ngIf="show">
+            <div class="table-responsive" *ngIf='events'>
+            <table ng-table="tableParams" class="table ng-table-rowselected table-hover table-condensed table-striped table-responsive" show-filter="true" template-pagination="pager" export-csv="csv">
+                <thead>
+                    <tr>
+                        <th>Add to Itinerary?</th>
+                        <th>Place</th>
+                        <th>Address</th>
+                        <th>Category</th>
+                    </tr>
+                </thead>
+                <ng-template ngFor let-group [ngForOf]='events.response.groups'>
+                <tr *ngFor="let event of group.items" ng-click="event.$selected = !event.$selected; changeSelection(event)"
+                          ng-class="{'active': event.$selected}">
+                  <td width="30" style="text-align: left" header="'tableCheckUncheckAll'">
+                      <input type="checkbox" ng-model="checkboxes.items[event.id]" />
+                  </td>
+                  <td data-title="'Place'" sortable="place" filter="{ 'place': 'select' }" filter-data="places($column)">{{ event.venue.name }}</td>
+                  <td data-title="'Address'" sortable="address" filter="{ 'address': 'address' }">{{ event.venue.location.address }} </td>
+                  <td data-title="'Category'" sortable="category" filter="{'category: 'category'}" *ngFor="let category of event.venue.categories">
+                        {{ category.name }}
+                    </td>   
+                </tr>
+                </ng-template>
+                <!-- <form [formGroup]="form" (ngSubmit)="submit()"> -->
+                    <!-- our form array of checkboxes will go here -->
+                    <!-- <button>submit</button> -->
+                <!-- </form> -->
+                </table>
+            </div>
+        </ng-container>
+    </div>
+</body>
