--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,3 +3,4 @@
 @import 'node_modules/bootstrap/scss/bootstrap.scss';
 @import '../node_modules/font-awesome/css/font-awesome.css';
 @import "~ngx-easy-table/style.scss";
+@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
