working drag and drop

--- a/frontend/src/app/views/itinerary-data/itinerary-data.component.css
+++ b/frontend/src/app/views/itinerary-data/itinerary-data.component.css
@@ -1,3 +1,15 @@
+.column {
+    float: left;
+    width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 .ng-table tr.emphasis td {
     background-color: #DDD;
     font-weight: bold;
@@ -10,11 +22,13 @@
 .stylish-input-group .input-group-addon{
     background: white !important; 
 }
+
 .stylish-input-group .form-control{
 	border-right:0; 
 	box-shadow:0 0 0; 
 	border-color:#ccc;
 }
+
 .stylish-input-group button{
     border:4;
     background:transparent;
