--- a/frontend/src/app/views/itinerary-data/itinerary-data.component.html
+++ b/frontend/src/app/views/itinerary-data/itinerary-data.component.html
@@ -32,37 +32,49 @@
         <div class="column">
         <ng-container *ngIf="show">
             <div class="table-responsive" *ngIf='events'>
-            <table ng-table="tableParams" class="table ng-table-rowselected table-hover table-condensed table-striped table-responsive" show-filter="true" template-pagination="pager" export-csv="csv">
+            <table ng-table="tableParams" class="table ng-table-rowselected table-hover table-condensed table-striped table-responsive">
                 <thead>
                     <tr>
-                        <!-- <th>Add to Itinerary?</th> -->
                         <th>Place</th>
                         <th>Address</th>
                         <th>Category</th>
                     </tr>
                 </thead>
                 <ng-template ngFor let-group [ngForOf]='events.response.groups'>
-                <tr draggable *ngFor="let event of group.items; let i=index;">
-                    <td data-title="'Place'" draggable="true" [dragData]="event.venue.name">{{ event.venue.name }}</td>
-                    <td data-title="'Address'" draggable="true" [dragData]="event.venue.location.address">{{ event.venue.location.address }} </td>
-                    <td data-title="'Category'" draggable="true" *ngFor="let category of event.venue.categories">
-                        {{ category.name }}
-                    </td>    
-                </tr>
+                <div draggable="true" (dragstart)="drag($event)">
+                        <tr *ngFor="let place of group.items; let i=index;" draggable="true" (dragstart)="drag($event)" [dragData]="place">
+                                <td data-title="'Place'" >{{ place.venue.name }}</td>
+                                <td data-title="'Address'">{{ place.venue.location.address }} </td>
+                                <td data-title="'Category'" *ngFor="let category of place.venue.categories">
+                                    {{ category.name }}
+                                </td>   
+                            </tr>
+                </div>
                 </ng-template>
-                <!-- <form [formGroup]="form" (ngSubmit)="submit()"> -->
-                    <!-- our form array of checkboxes will go here -->
-                    <!-- <button>submit</button> -->
-                <!-- </form> -->
                 </table>
             </div>
         </ng-container>
     </div>
-    <div class="column" droppable (onDrop)="onItemDrop($event)">
+    <div class="column" >
+    <div droppable (onDrop)="onItemDrop($event)">
         <p>Drop items here</p>
         <div class="panel-body">
-                <li *ngFor="let event of droppedItems" class="list-group-item">{{event}}</li>
+                <li draggable="true" *ngFor="let place of droppedItems" class="list-group-item">
+                    <p>
+                            {{ place.venue.name }}
+                    </p>
+                    <p>
+                            {{ place.venue.location.address }}
+                    </p>
+                </li>
         </div>
     </div> 
+    <div droppable (onDrop)="onItemDelete($event)">
+        <p>Delete items from itinerary</p>
+        <div class="panel-body">
+                <li *ngFor="let event of droppedItems" class="list-group-item"></li>
+        </div>
+    </div>
+</div>
 </div>
 </body>
