--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,26 +1,50 @@
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
-    <span>My First App</span>
-        <span class="example-fill-remaining-space"></span>
-        <span class="align-center"></span>
-        <span class="example-spacer"></span>
-        <button mat-button>About</button>
-        <button mat-button>Contact</button>
-        <button mat-icon-button [matMenuTriggerFor]="menu">
-      <mat-icon>more_vert</mat-icon>
-    </button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item>
-        <mat-icon>dialpad</mat-icon>
-        <span>Redial</span>
-      </button>
-      <button mat-menu-item disabled>
-        <mat-icon>voicemail</mat-icon>
-        <span>Check voicemail</span>
-      </button>
-      <button mat-menu-item>
-        <mat-icon>notifications_off</mat-icon>
-        <span>Disable alerts</span>
-      </button>
-    </mat-menu>
-     </mat-toolbar-row>
+<div class="container py-5">
+  <div class="row">
+      <div class="col-md-12">
+          <h2 class="text-center text-white mb-4">Bootstrap 4 Login Form</h2>
+          <div class="row">
+              <div class="col-md-6 mx-auto">
+
+                  <!-- form card login -->
+                  <div class="card rounded-0">
+                      <div class="card-header">
+                          <h3 class="mb-0">Login</h3>
+                      </div>
+                      <div class="card-body">
+                          <form class="form" role="form" autocomplete="off" id="formLogin" novalidate="" method="POST">
+                              <div class="form-group">
+                                  <label for="uname1">Username</label>
+                                  <input type="text" class="form-control form-control-lg rounded-0" name="uname1" id="uname1" required="">
+                                  <div class="invalid-feedback">Oops, you missed this one.</div>
+                              </div>
+                              <div class="form-group">
+                                  <label>Password</label>
+                                  <input type="password" class="form-control form-control-lg rounded-0" id="pwd1" required="" autocomplete="new-password">
+                                  <div class="invalid-feedback">Enter your password too!</div>
+                              </div>
+                              <div>
+                                  <label class="custom-control custom-checkbox">
+                                    <input type="checkbox" class="custom-control-input">
+                                    <span class="custom-control-indicator"></span>
+                                    <span class="custom-control-description small text-dark">Remember me on this computer</span>
+                                  </label>
+                              </div>
+                              <button type="submit" class="btn btn-success btn-lg float-right" id="btnLogin">Login</button>
+                          </form>
+                      </div>
+                      <!--/card-block-->
+                  </div>
+                  <!-- /form card login -->
+
+              </div>
+
+
+          </div>
+          <!--/row-->
+
+      </div>
+      <!--/col-->
+  </div>
+  <!--/row-->
+</div>
+<!--/container-->
