login button working

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -13,6 +13,7 @@
                 <li class="nav-item"><a class="nav-link" routerLink="myItineraries">My Itineraries</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="build">Build an Itinerary</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="courses">Contact Us</a></li>
+                <li id="login-button"><button class="nav-link" (click)="login()">Login</button></li>
             </ul>
         </div>
     </div>
