--- a/frontend/src/app/views/itinerary-data/itinerary-data.component.html
+++ b/frontend/src/app/views/itinerary-data/itinerary-data.component.html
@@ -41,15 +41,13 @@
                     </tr>
                 </thead>
                 <ng-template ngFor let-group [ngForOf]='events.response.groups'>
-                <div draggable="true" (dragstart)="drag($event)">
-                        <tr *ngFor="let place of group.items; let i=index;" draggable="true" (dragstart)="drag($event)" [dragData]="place">
-                                <td data-title="'Place'" >{{ place.venue.name }}</td>
-                                <td data-title="'Address'">{{ place.venue.location.address }} </td>
-                                <td data-title="'Category'" *ngFor="let category of place.venue.categories">
-                                    {{ category.name }}
-                                </td>   
-                            </tr>
-                </div>
+                    <tr *ngFor="let place of group.items; let i=index;" draggable="true" (dragstart)="drag($event)" [dragData]="place">
+                            <td data-title="'Place'" >{{ place.venue.name }}</td>
+                            <td data-title="'Address'">{{ place.venue.location.address }} </td>
+                            <td data-title="'Category'" *ngFor="let category of place.venue.categories">
+                                {{ category.name }}
+                            </td>   
+                    </tr>
                 </ng-template>
                 </table>
             </div>
@@ -57,7 +55,7 @@
     </div>
     <div class="column" >
     <div droppable (onDrop)="onItemDrop($event)">
-        <p>Drop items here</p>
+        <h2>Drop items here</h2>
         <div class="panel-body">
                 <li draggable="true" *ngFor="let place of droppedItems" class="list-group-item">
                     <p>{{ place.venue.name }}</p>
