progress on making it look like a real itinerary builder

--- a/frontend/src/app/views/itinerary-data/itinerary-data.component.css
+++ b/frontend/src/app/views/itinerary-data/itinerary-data.component.css
@@ -34,3 +34,9 @@
     border:4;
     background:transparent;
 }
+
+.submit {
+    background-color: green;
+}
+/* On mouse-over */
+.btn:hover {background: #eee;}
