--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,7 +11,7 @@
                 <li class="nav-item"><a class="nav-link" routerLink="home">Home</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="about">About</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="myItineraries">My Itineraries</a></li>
-                <li class="nav-item"><a class="nav-link" routerLink="build">Build an Itinerary</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="itineraryBuilder">Build an Itinerary</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="courses">Contact Us</a></li>
             </ul>
         </div>
