--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,28 +1,29 @@
 <header>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-        <a class="navbar-brand" navbar-light>Travel Express</a>
-        <button class="navbar-toggler hidden-sm-up" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" navbar-light>Travel Express</a>
+            <button class="navbar-toggler hidden-sm-up" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed"
+                data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-        </button>
-        
-        <div [ngbCollapse]="!isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link" routerLink="home">Home</a></li>
-                <li class="nav-item"><a class="nav-link" routerLink="about">About</a></li>
-                <li class="nav-item"><a class="nav-link" routerLink="myItineraries">My Itineraries</a></li>
-                <li class="nav-item"><a class="nav-link" routerLink="itineraryBuilder">Build an Itinerary</a></li>
-                <li class="nav-item"><a class="nav-link" routerLink="courses">Contact Us</a></li>
-            </ul>
+            </button>
+
+            <div [ngbCollapse]="!isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a class="nav-link" routerLink="home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" routerLink="about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" routerLink="myItineraries">My Itineraries</a></li>
+                    <li class="nav-item"><a class="nav-link" routerLink="itineraryBuilder">Build an Itinerary</a></li>
+                    <li class="nav-item"><a class="nav-link" routerLink="courses">Contact Us</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 </header>
 <div>
-        <router-outlet></router-outlet>
-      </div>
-  <!-- Page Content -->
-  <!-- <section class="py-5">
+    <router-outlet></router-outlet>
+</div>
+<!-- Page Content -->
+<!-- <section class="py-5">
       <div>
         <router-outlet></router-outlet>
       </div>
