Formatting and progress

--- a/frontend/src/app/views/itinerary-data/itinerary-data.component.html
+++ b/frontend/src/app/views/itinerary-data/itinerary-data.component.html
@@ -22,8 +22,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <button (click)="onButtonClick(wordToSearchFor.value)">
-                                <span class="glyphicon glyphicon-search">Submit</span>
+                            <button (click)="onSearchButtonClick(wordToSearchFor.value)">
+                                <span class="glyphicon glyphicon-search">Search</span>
+                            </button>
+                            <button (click)="onSaveButtonClick()">
+                                <span class="glyphicon glyphicon-search">Save</span>
                             </button>
                         </div>
                     </div>
