--- a/frontend/src/app/views/itinerary-data/itinerary-data.component.css
+++ b/frontend/src/app/views/itinerary-data/itinerary-data.component.css
@@ -4,12 +4,24 @@
     left: 0;
 }
 
-.tr .border-bottom{
-    border-style: dotted;
+.map {
+    width: 100%;
+    height: 400px;
+    background-color: grey;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+tr { 
+    border: dotted;
+    border-width: 4px 0;
 }
 
 .name{
     font-size: 120%;
+    font-weight: bold;
 }
 
 .business-header {
@@ -63,6 +75,36 @@
 
 .submit {
     background-color: green;
+    color: white;
 }
+
+.trash {
+    background-color: red;
+    color: white;
+}
+
+.submit-content{
+    display: none;
+}
+
+.trash-content{
+    display:none;
+}
+
 /* On mouse-over */
-.btn:hover {background: #eee;}
+.submit:hover .submit-content {
+    background: #eee;
+    color: black;
+    display: block;
+}
+
+.trash:hover .trash-content{
+    background: #eee;
+    color: black;
+    display: block;
+}
+
+.itin_num{
+    font-size: 200%;
+    color: purple;
+}
