--- a/frontend/src/app/views/itinerary-data/itinerary-data.component.html
+++ b/frontend/src/app/views/itinerary-data/itinerary-data.component.html
@@ -70,7 +70,7 @@
                                 [dragData]=tripEvent>
                                 <span class="col-lg-5 col-md-5 col-sm-5 col-xs-5 itin_num"> {{ tripEvent.order + 1 }}</span>
                                 <span class="col-md-11">
-                                    <span> {{ tripEvent.name }}</span>
+                                    <span class="itin-name"> {{ tripEvent.name }}</span>
                                     <p>
                                         <span class="col-md-10 "></span>
                                         <span class="col-md-2 ">{{ tripEvent.address }}</span>
